# schema-registry

./: Cargo.toml  LICENSE  Makefile
.github/DISCUSSION_TEMPLATE/: q-a.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml
examples/crud-compatibility/: Cargo.toml
examples/crud-compatibility/src/: main.rs
examples/crud-configuration/: Cargo.toml
examples/crud-exporter/: Cargo.toml
examples/crud-mode/: Cargo.toml
examples/crud-schema/: Cargo.toml
examples/crud-subject/: Cargo.toml
examples/mocking-and-testing/: Cargo.toml
examples/mocking-and-testing/src/: main.rs
schema-registry/: Cargo.toml
schema-registry/src/: api.rs  error.rs  lib.rs
schema-registry/src/api/: compatibility.rs  configuration.rs  exporter.rs  mod.rs  mode.rs  schema.rs  subject.rs
schema-registry/src/client/: config.rs  mod.rs
schema-registry/src/client/implementation/: mode.rs  subject.rs
schema-registry/src/types/: mod.rs
schemas/avro/: book-key.avsc  book-value.avsc
src/: lib.rs
src/api/: compatibility.rs  configuration.rs  exporter.rs  mod.rs  mode.rs  schema.rs  subject.rs
src/client/: config.rs  http.rs  http_util.rs  mod.rs
src/client/implementation/: compatibility.rs  configuration.rs  exporter.rs  mod.rs  schema.rs
src/types/: mod.rs
tests/: avro.rs  utils.rs
tools/: docker-compose.yaml  schema-registry.http
tools/schemas/avro/: author-value.avsc
tools/schemas/protobuf/: author-value.proto  book-value.proto
