[package]
name = "schema-registry"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
description = "Interact with the Confluent Schema Registry"
homepage = "https://github.com/faveroferreira/schema-registry"
repository = "https://github.com/faveroferreira/schema-registry"
authors = ["Guilherme Favero Ferreira <guifaveroferreira@gmail.com>"]
include = ["src/**/*", "Cargo.toml"]
keywords = ["schemaregistry", "schema", "avro", "protobuf", "jsonschema"]
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
testing = [ "dep:mockall" ]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

default = ["native-tls"]

[dependencies]
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
dashmap = "6.1"
http = "1.1"
mockall = { version = "0.13", optional = true }

[dev-dependencies]
factori = "1.1"
tokio = { version = "1.40", features = ["full"] }
testcontainers = { version = "0.23", features = ["http_wait"] }
testcontainers-redpanda-rs = { version = "0.10" }
serial_test = "3.1"
